--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -16,12 +16,22 @@
 }
 @font-face {
     font-family: 'iconfont';
-    src: url('//at.alicdn.com/t/font_1457261953_9633522.eot'); /* IE9*/
-    src: url('//at.alicdn.com/t/font_1457261953_9633522.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/font_1457261953_9633522.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/font_1457261953_9633522.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/font_1457261953_9633522.svg#iconfont') format('svg'); /* iOS 4.1- */
+    src: url('//at.alicdn.com/t/font_1458443212_5752697.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/font_1458443212_5752697.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/font_1458443212_5752697.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/font_1458443212_5752697.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/font_1458443212_5752697.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
+
+.groupshowbox{width: 100%;height: 100%;position: fixed;z-index: 16;background:rgba(0,0,0,0.9);background:#000\9;top: 0;padding-top: 80px;}
+.bg{position: fixed;width: 100%;height: 100%;z-index: -1;}
+.groupshow-item{width: 100%;}
+.groupshowcontainer{width:100%;height: 100%;}
+.groupshowpic{width: 200px;margin: 0 auto;display: block;}
+.groupshow-title{text-align: center;padding:0 20px;color: #fff;}
+.groupshow-text{padding: 0 20px;color: #fff;font-size: 14px;}
+.groupshow-close{color: #eee;position: absolute;right: 15px;top: 15px;z-index: 7;font-size: 20px;}
+
 .item-img{
     background-position: center;
     background-size: cover;
@@ -55,6 +65,7 @@
 .content{}
 .text-line3{ overflow: hidden;  text-overflow: ellipsis;  display: -webkit-box;  -webkit-box-orient: vertical;  -webkit-line-clamp: 3;}
 .text-line2{ overflow: hidden;  text-overflow: ellipsis;  display: -webkit-box;  -webkit-box-orient: vertical;  -webkit-line-clamp: 2;}
+.text-line{ overflow: hidden;  text-overflow: ellipsis;  display: -webkit-box;  -webkit-box-orient: vertical;  -webkit-line-clamp: 1;}
 
 .myfooter{
     min-height: 2.2rem;
@@ -67,7 +78,7 @@
 .fl{float: left;}
 .fr{float: right;}
 .tip{color: #888888;display: block;text-align: center;font-size: 12px;padding: 10px 10px;}
-.extra_button{position: fixed;z-index: 5;background: #3cc51f;width:50px;height:50px;border-radius: 50px;text-align: center;line-height: 50px;color: #fff;right: 30px;bottom: 70px;}
+.extra_button{position: fixed;z-index: 16;background: #3cc51f;width:50px;height:50px;border-radius: 50px;text-align: center;line-height: 50px;color: #fff;right: 30px;bottom: 70px;}
 .extra_button .text{font-size: 16px;}
 .collection-header{width: 100%;height: 10rem;background: #333;color: #fff;padding: 20px;}
 .collection-header-img{width: 80px;margin-right: 10px;}
@@ -91,16 +102,21 @@
     -webkit-box-orient: vertical;
     line-height: 1.05rem;}
 
-
 .typetag{width: 35px;height: 35px;background: orange;color: #fff;font-size: 12px;text-align: center;line-height: 35px;}
 
-.banner-header{width: 100%;background: #333333;padding: 10px;}
+.banner-header{width: 100%;background: #666;}
+.banner-detail{padding: 20px 20px 0 20px;}
 .banner-header-imgbox{width: 100px;margin-right: 10px;}
 .banner-header-imgbox img{width: 100px;height: 100px;}
 .banner-header-infobox{color: #fff;}
 .banner-header-infobox .info-title{line-height: 1.2rem;font-size: 16px;height: 2.4rem;}
 .banner-header-infobox .info{margin: 4px 0;overflow: hidden;  text-overflow: ellipsis;  display: -webkit-box;  -webkit-box-orient: vertical;  -webkit-line-clamp: 3;line-height: 0.85rem;}
 .banner-header .pricebox{width: 100px;text-align: center;}
+.banner-header-infobox .author-box{vertical-align: middle;font-size: 16px;color: #fff;padding: 5px;}
+.banner-header-infobox .author-box > img{width: 30px;height: 30px;border-radius: 15px;vertical-align: middle;}
+.banner-header-btns{background:rgba(0,0,0,0.4);background:#000\9;}
+.banner-header-btns > .btn-item{text-align: center;color: #EEEEEE;font-size: 14px;line-height: 0.8rem;padding: 5px 0; border-left: solid 1px #fff;}
+.banner-header-btns > .btn-item:first-child{border: none;}
 
 .card-morebox{background: #eee;width: 100%;padding: 5px;}
 .text-right{text-align: right;}
