--- a/Application/Phone/View/Index/index.html
+++ b/Application/Phone/View/Index/index.html
@@ -41,8 +41,8 @@
                                             <div class="item-img" style="background-image: url({$info['goodsfirstimg']})"></div>
                                         </div>
                                         <div class="item-inner">
-                                            <div class="item-text index-item-primary">$info['goodsInfo']['name']</div>
-                                            <div class="item-subtitle"><span class="index-item-grey">by $info['shopName']</span></div>
+                                            <div class="item-text index-item-primary">{$info['goodsInfo']['name']}</div>
+                                            <div class="item-subtitle"><span class="index-item-grey">by {$info['shopName']}</span></div>
                                             <div class="item-subtitle">
                                                 <span class="green-text fr" style="font-size: 16px;vertical-align: bottom;">￥{$info['goodsInfo']['price']}</span>
                                                 <span class="index-item-grey">浏览：{$info['UseType_Visit']} | 喜欢：{$info['UseType_Like']} </span></div>
