--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -1,127 +1,42 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>一妙集</title>
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-    <link rel="shortcut icon" href="/favicon.ico">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
-    <link rel="stylesheet" href="__PUBLIC__/SUI-Mobile/dist/css/sm.min.css">
-    <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/app.css?v=4">
-
-
-</head>
-<body>
-<div class="page-group">
+<extend name="template/temp" />
+<block name="content">
     <div class="page">
-        <div class="content">
+        <div class="content native-scroll">
             <div class="margin-top"></div>
-            <div class="yspanel">
-                <a href="#">
-                    <div class="yspanel-titlebox flex">
-                        <div class="flex-1">
-                            勾漏洞美味草莓园
+            <volist name="list" id="info">
+                <div class="yspanel">
+                    <a href="{:UC('Miaoji/detail',array('id'=>$info['id']))}">
+                        <div class="yspanel-titlebox flex">
+                            <div class="flex-1">
+                                {$info['name']}
+                            </div>
+                            <div class="yspanel-pricebox gray-text1">
+                                ￥{$info['price']}
+                            </div>
                         </div>
-                        <div class="yspanel-pricebox gray-text1">
-                            ￥10
+                        <div class="yspanel-image-box">
+                            <img class="yspanel-image-image" src="{$info['imglist']}">
                         </div>
-                    </div>
-                    <div class="yspanel-image-box">
-                        <img class="yspanel-image-image" src="__PUBLIC__/images/yuan3.png">
-                    </div>
-                </a>
-                <div class="yspanel-content-box">
-                    <div class="yspanel-ysbtnlist flex">
-                        <div class="flex-1">
-                            <span class="ysbtn"><i class="iconfont">&#xe606;</i></span>
+                    </a>
+                    <div class="yspanel-content-box">
+                        <div class="yspanel-ysbtnlist flex">
+                            <div class="flex-1">
+                                <a class="ysbtn" href="tel:{$info['phone']}"><i class="iconfont">&#xe606;</i>电话</a>
+                            </div>
+                            <div class="flex-1">
+                                <span class="ysbtn hover"><i class="iconfont">&#xe608;</i> 5</span>
+                            </div>
                         </div>
-                        <div class="flex-1">
-                            <span class="ysbtn"><i class="iconfont">&#xe608;</i></span>
-                        </div>
-                    </div>
 
+                    </div>
+                    <div class="yspanel-footer gray-text1 flex">
+                        <div class="flex-1">{$info['address']}</div>
+                        <a class="lookmap" href="#">查看地图</a>
+                    </div>
                 </div>
-                <div class="yspanel-footer gray-text1 flex">
-                    <div class="flex-1">勾漏洞往新墟方向500米</div>
-                    <a class="lookmap" href="#">查看地图</a>
-                </div>
-            </div>
+            </volist>
 
-            <div class="yspanel margin-top30">
-                <a href="#">
-                    <div class="yspanel-titlebox flex">
-                        <div class="flex-1">
-                            罗政村村口草莓园
-                        </div>
-                        <div class="yspanel-pricebox gray-text1">
-                            ￥15
-                        </div>
-                    </div>
-                    <div class="yspanel-image-box">
-                        <img class="yspanel-image-image" src="__PUBLIC__/images/yuan1.png">
-                    </div>
-                </a>
-                <div class="yspanel-content-box">
-                    <div class="yspanel-ysbtnlist flex">
-                        <div class="flex-1">
-                            <span class="ysbtn"><i class="iconfont">&#xe606;</i></span>
-                        </div>
-                        <div class="flex-1">
-                            <span class="ysbtn"><i class="iconfont">&#xe608;</i></span>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="yspanel-footer gray-text1 flex">
-                    <div class="flex-1">罗政村村口</div>
-                    <a class="lookmap" href="#">查看地图</a>
-                </div>
-            </div>
-
-            <div class="yspanel margin-top30">
-                <a href="#">
-                    <div class="yspanel-titlebox flex">
-                        <div class="flex-1">
-                            隆胜草莓园
-                        </div>
-                        <div class="yspanel-pricebox gray-text1">
-                            ￥12
-                        </div>
-                    </div>
-                    <div class="yspanel-image-box">
-                        <img class="yspanel-image-image" src="__PUBLIC__/images/yuan2.png">
-                    </div>
-                </a>
-                <div class="yspanel-content-box">
-                    <div class="yspanel-ysbtnlist flex">
-                        <div class="flex-1">
-                            <span class="ysbtn"><i class="iconfont">&#xe606;</i></span>
-                        </div>
-                        <div class="flex-1">
-                            <span class="ysbtn"><i class="iconfont">&#xe608;</i></span>
-                        </div>
-                    </div>
-
-                </div>
-                <div class="yspanel-footer gray-text1 flex">
-                    <div class="flex-1">二级路往隆胜方向</div>
-                    <a class="lookmap" href="#">查看地图</a>
-                </div>
-            </div>
-
-
-            <p class="gray-text1 text-center small-text margin-top30">如果您知道更多好玩的，那就<a href="#">告诉我们</a>吧</p>
+            <include file="./Application/Phone/View/Miaoji/footer.html" />
         </div>
     </div>
-</div>
-
-<script type='text/javascript' src='//g.alicdn.com/sj/lib/zepto/zepto.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
-<script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
-<script type='text/javascript' src="__PUBLIC__/js/app.js?v=8" charset='utf-8'></script>
-</body>
-</html>
+</block>
