--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -22,14 +22,16 @@ body{background: #eee;font-size: 14px;}
 .gray-text1{color:#aaa;}
 .small-text{font-size: 12px;}
 
+.orange-text{color: orange;}
+
 .iconfont{font-family:"iconfont";font-style:normal;}
 @font-face {
     font-family: 'iconfont';
-    src: url('//at.alicdn.com/t/font_1458570523_3787255.eot'); /* IE9*/
-    src: url('//at.alicdn.com/t/font_1458570523_3787255.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('//at.alicdn.com/t/font_1458570523_3787255.woff') format('woff'), /* chrome、firefox */
-    url('//at.alicdn.com/t/font_1458570523_3787255.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
-    url('//at.alicdn.com/t/font_1458570523_3787255.svg#iconfont') format('svg'); /* iOS 4.1- */
+    src: url('//at.alicdn.com/t/font_1458607944_213169.eot'); /* IE9*/
+    src: url('//at.alicdn.com/t/font_1458607944_213169.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('//at.alicdn.com/t/font_1458607944_213169.woff') format('woff'), /* chrome、firefox */
+    url('//at.alicdn.com/t/font_1458607944_213169.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('//at.alicdn.com/t/font_1458607944_213169.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .flex{
@@ -75,6 +77,11 @@ body{background: #eee;font-size: 14px;}
     justify-content: space-between;
 }
 
+.mask{position: fixed;z-index: 50;width: 100%;height: 100%;background:rgba(0,0,0,0.8);background:#000\9;top:0;left:0;filter:alpha(opacity=20)\9;}
+.mask .text-nomal-box{overflow: scroll;position: absolute;bottom: 80px; top: 80px;font-size: 14px;font-weight: normal;color: #fff;padding: 30px;width: 100%;}
+.mask .mask-close{position: fixed;right: 10px;top: 10px;display: block;}
+.share-jiantou{position: fixed;right: 20px;top: 20px;}
+
 .yspanel{display: block;background: #fff;}
 a.yspanel,.yspanel > a{color: #333333;}
 .yspanel-image-box{position: relative;max-height: 200px;overflow: hidden;}
@@ -84,6 +91,19 @@ a.yspanel,.yspanel > a{color: #333333;}
 .yspanel-content-box{padding: 10px;}
 .yspanel-titlebox{padding: 10px;font-size: 18px;}
 .yspanel-ysbtnlist{text-align: center;font-size: 18px;padding: 10px 0;}
-.ysbtn{border:solid 1px #aaa;padding: 5px 20px;border-radius: 50px; color: #333333;}
-.ysbtn.hover{color: red;}
+.ysbtn{border:solid 1px #aaa;padding: 5px 20px;border-radius: 50px; color: #666;}
+.ysbtn.hover{color: #fff;background: orange;border: none;}
 .yspanel-footer{border-top: solid 1px #dddddd;padding: 10px;}
+.yspanel-bigimage-textbox{position: relative;display: block;}
+.yspanel-image-countbox{position: absolute;top: 15px;right: 15px;color: #fff;}
+.btnitem{text-align: center;}
+a.btnitem{display: block;}
+.table {
+    border-collapse: collapse !important;
+    width: 100%;
+}
+.table-bordered th,
+.table-bordered td {
+    border: 1px solid #ddd !important;
+    padding: 5px;
+}
