--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -4,7 +4,7 @@
         <div class="content native-scroll">
             <div class="margin-top"></div>
             <volist name="list" id="info">
-                <div class="yspanel">
+                <div class="yspanel margin-top30">
                     <a href="{:UC('Miaoji/detail',array('id'=>$info['id']))}">
                         <div class="yspanel-titlebox flex">
                             <div class="flex-1">
