--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="__PUBLIC__/SUI-Mobile/dist/css/sm.min.css">
     <link rel="stylesheet" href="//g.alicdn.com/msui/sm/0.6.2/css/sm-extend.min.css">
-    <link rel="stylesheet" href="__PUBLIC__/css/app.css?v=13">
+    <link rel="stylesheet" href="__PUBLIC__/css/app.css?v={$rannum}">
 
 
 </head>
@@ -27,6 +27,6 @@
 <script>
     wx.config({$jsConfig});
 </script>
-<script type='text/javascript' src="__PUBLIC__/js/app.js?v=9" charset='utf-8'></script>
+<script type='text/javascript' src="__PUBLIC__/js/app.js?v={$rannum}" charset='utf-8'></script>
 </body>
 </html>
