--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -26,6 +26,12 @@
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
     wx.config({$jsConfig});
+    wx.ready(function(){
+        alert('成功');
+    });
+    wx.error(function(res){
+        alert(JSON.stringify(res));
+    });
 </script>
 <script type='text/javascript' src="__PUBLIC__/js/app.js?v={$rannum}" charset='utf-8'></script>
 </body>
