--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -25,12 +25,7 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script>
-    wx.config({$jsConfig});
-    wx.ready(function(){
-    });
-    wx.error(function(res){
-        alert(JSON.stringify(res));
-    });
+    jsConfig = {$jsConfig};
 </script>
 <script type='text/javascript' src="__PUBLIC__/js/app.js?v={$rannum}" charset='utf-8'></script>
 </body>
