--- a/Application/Phone/View/Miaoji/showcase.html
+++ b/Application/Phone/View/Miaoji/showcase.html
@@ -1,6 +1,6 @@
 <extend name="template/temp" />
 <block name="content">
-    <div class="page">
+    <div class="page" id="showcase">
         <div class="content native-scroll">
             <p class="gray-text1 text-center">北流最全妙集</p>
             <volist name="list" id="info">
