--- a/Application/Phone/View/template/temp.html
+++ b/Application/Phone/View/template/temp.html
@@ -24,9 +24,12 @@
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm.min.js' charset='utf-8'></script>
 <script type='text/javascript' src='//g.alicdn.com/msui/sm/0.6.2/js/sm-extend.min.js' charset='utf-8'></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script>
-    jsConfig = {$jsConfig};
-</script>
+<if condition="$jsConfig">
+    <script>
+        jsConfig = {$jsConfig};
+    </script>
+</if>
+
 <script type='text/javascript' src="__PUBLIC__/js/app.js?v={$rannum}" charset='utf-8'></script>
 </body>
 </html>
