--- a/Application/Phone/View/Admin/uploadForm.html
+++ b/Application/Phone/View/Admin/uploadForm.html
@@ -14,7 +14,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">名称</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="名称" name="name">
+                                    <input type="text" placeholder="名称" name="name" value="{$info['id']}">
                                 </div>
                             </div>
                         </div>
@@ -25,7 +25,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">电话</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="电话" name="phone">
+                                    <input type="text" placeholder="电话" name="phone"  value="{$info['phone']}">
                                 </div>
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">经纬度</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="经纬度" name="lnglat" id="lnglatInput">
+                                    <input type="text" placeholder="经纬度" name="latlng" id="latlngInput"  value="{$info['latlng']}">
                                 </div>
                             </div>
                         </div>
@@ -61,7 +61,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">具体地址</div>
                                 <div class="item-input">
-                                    <textarea name="address"></textarea>
+                                    <textarea name="address">{$info['address']}</textarea>
                                 </div>
                             </div>
                         </div>
@@ -72,7 +72,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">说明</div>
                                 <div class="item-input">
-                                    <textarea name="intro"></textarea>
+                                    <textarea name="intro">{$info['intro']}</textarea>
                                 </div>
                             </div>
                         </div>
@@ -83,12 +83,13 @@
                             <div class="item-inner">
                                 <div class="item-title label">额外信息</div>
                                 <div class="item-input">
-                                    <textarea name="extra"></textarea>
+                                    <textarea name="extra">{$info['extra']}</textarea>
                                 </div>
                             </div>
                         </div>
                     </li>
                 </ul>
+                <input type="hidden" name="id" value="{$info['id']}">
             </div>
             <div class="content-block">
                 <div class="row">
