--- a/Application/Phone/View/Admin/uploadForm.html
+++ b/Application/Phone/View/Admin/uploadForm.html
@@ -14,7 +14,7 @@
                             <div class="item-inner">
                                 <div class="item-title label">名称</div>
                                 <div class="item-input">
-                                    <input type="text" placeholder="名称" name="name" value="{$info['id']}">
+                                    <input type="text" placeholder="名称" name="name" value="{$info['name']}">
                                 </div>
                             </div>
                         </div>
