菜单和一些footer的改动

--- a/Application/Phone/View/Miaoji/footer.html
+++ b/Application/Phone/View/Miaoji/footer.html
@@ -1,1 +1,1 @@
-<p class="gray-text1 text-center small-text margin-top30">如果您知道更多好玩的，那就<a href="#">告诉我们</a>吧</p>
+<p class="gray-text1 text-center small-text margin-top30">如果您知道更多好玩的，那就<a href="#" id="telmebtn">告诉我们</a>吧</p>
