--- a/Application/Phone/View/Miaoji/showcase.html
+++ b/Application/Phone/View/Miaoji/showcase.html
@@ -2,7 +2,7 @@
 <block name="content">
     <div class="page" id="showcase">
         <div class="content native-scroll">
-            <p class="gray-text1 text-center">北流最全妙集</p>
+            <p class="gray-text1 text-center">北流最佳妙集</p>
             <volist name="list" id="info">
                 <a class="yspanel margin-top30" href="{:UC('Miaoji/showcaseDetail',array('id'=>$info['id']))}">
                     <div class="yspanel-image-box">
