--- a/Application/Phone/View/Miaoji/showcase.html
+++ b/Application/Phone/View/Miaoji/showcase.html
@@ -4,7 +4,7 @@
         <div class="content native-scroll">
             <p class="gray-text1 text-center">北流最佳妙集</p>
             <volist name="list" id="info">
-                <a class="yspanel margin-top30" href="{:UC('Miaoji/showcaseDetail',array('id'=>$info['id']))}">
+                <a class="yspanel margin-top30" href="{:UC('Miaoji/showcaseDispatch',array('id'=>$info['id']))}">
                     <div class="yspanel-image-box">
                         <div class="yspanel-image-textbox">- <span class="text">{$info['name']}</span> -</div>
                         <img class="yspanel-image-image" src="{$info['imglist']}">
