--- a/Public/css/app.css
+++ b/Public/css/app.css
@@ -112,3 +112,7 @@ a.btnitem{display: block;}
     border: 1px solid #ddd !important;
     padding: 5px;
 }
+
+.swiper-slide-center-text{position: absolute;top:50%;left: 50%;color: #fff;font-size: 28px;width: 200px;line-height: 50px;margin-top: -25px;margin-left: -100px;text-align: center;text-shadow: 1px 1px 1px #666;}
+.fixbtnbox{position: fixed;right: 20px;bottom: 20px;}
+.fixbtn{display: block;width:50px;height: 50px;background: #00CC00;border-radius: 50px;text-align: center;line-height: 50px;color: #fff;font-size: 16px;}
