--- a/Application/Phone/View/Miaoji/showcaseDetail.html
+++ b/Application/Phone/View/Miaoji/showcaseDetail.html
@@ -20,9 +20,10 @@
                             <if condition="($info['imglist']) AND ($info['imglist'][0])">
                                 <img class="yspanel-image-image" src="{$info['imglist']}">
                                 <else/>
-                                <div class="swiper-slide-center-text">求图片>_<</div>
-                                <img src="__PUBLIC__/images/nopic.png" alt="" style="width: 100%">
                             </if>
+                        </div>
+                        <div class="yspanel-content-box text-line3">
+                            {$info['intro']|strip_tags}
                         </div>
                     </a>
                     <div class="yspanel-content-box">
@@ -36,7 +37,6 @@
 
                             </div>
                         </div>
-
                     </div>
                     <div class="yspanel-footer gray-text1 flex">
                         <div class="flex-1">{$info['address']}</div>
